Update along with pilet API and feature updates